--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -281,28 +281,189 @@
      
         - (3) : 각 기대값을 **더하기**
 
+<br/>
 
+### 무의식적 통계학자의 법칙 (LOTUS)
+ 
+- 만약 우리가 확률 변수 X가 아니라 g(X)라는 변형된 값의 기대값을 구하고 싶을 때 g(x)에 대한 기댓값을 구하는 것이다 
 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장LOTUS예시문제.png)
+ 
+    - 즉, 기댓값을 계산할 때 k x P(k)에서 g(k) x P(k)가 되는 것
+ 
+        - **P(k)는 변함 없음** 
 
+<br/>
 
+### 지시 변수 (Indicator Random Variable)
 
+- 어떤 임의변수 X의 기대값을 구하고 싶은데 직접 PMF를 구하기는 복잡한 경우, X를 여러 개의 지시변수의 합으로 표현하면 계산을 단순화 할 수 있음
 
+- 경우의 수가 2개일 때만 사용 가능
 
+    -  ex: 주사위가 6이 나왔는가 ? 아닌가 ?
+ 
+    - ex: 시험에 합격했는가 ? 아닌가 ?  
 
+- 지시변수 IA는 "사건 A가 발생했는가?"를 나타냄
 
+    - A가 일어나면 = 1
 
+    - 안 일어나면 = 0
+ 
+    - 즉, 지시변수의 기댓값은 아래와 같다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장지시변수기댓값.png)
+     
+<br/>
 
+- 지시변수 활용 예시
 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장지시변수활용예시.png)
 
+<br/>
 
+### 독립 변수 (Independent Random Variables)
 
+- 두 임의변수 X, Y가 **독립**이라는 것은 변수 X의 값이 다른 변수 Y의 값에 **아무 영향을 주지 않는다**는 것이다
 
+    - 독립은 X⊥Y로 표기  
 
+    - ex: X = 주사위 굴리기 결과, Y = 동전던지기 결과
 
+<br/>
 
+- **두 변수가 독립일 때 성질**
 
+    - 성질 1 : X와 Y가 동시에 어떤 값을 가질 확률이, **각각의 확률 곱**으로 나눠질 수 있으면 독립이다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장독립성질1.png)
+     
+    - 성질 2 : 특정 **집합** A, B 안에 속하는 사건들도 **똑같이 곱으로 분리**된다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장독립성질2.png)
+     
+    - 위 성질을 일반화하면 아래와 같다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장독립성질일반화.png)
+     
+    - 성질 3 : **조건부확**률 공식에서 식을 간략화할 수 있다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장독립성질조건부확률.png)
+     
+    - 성질 4 : X와 Y가 **독립**일 때 두 값의 분산은 **각각의 분산을 더한 것과 같다**
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장독립성질분산.png)
+  
+<br/>
 
+### 확률 분포 (Probability distribution)
 
+- **정의** : 임의 변수가 가질 수 있는 값들에 대해 각각의 값이 **얼마나 자주 일어날 지**를 설명하는 규칙
+
+    - 확률분포는 확률변수가 **어떻게 움직이는지**(자주 나오는 값, 드문 값 등)를 **한눈에 보여준다**
+ 
+    - 이산 변수의 경우 PMF를 통해 표현 가능
+ 
+    - PMF를 형성하는 파라미터로 분포 표현
+ 
+<br/>
+
+- 데이터를 어떻게 모델링할 지 고르는 분포 선택의 흐름도는 
+
+    - (1) : 데이터가 이산(Discrete)인지, 연속(Continuous)인지 구분
+
+    - (2) : 데이터가 대칭적(Symmetric)**인지, 비대칭(Asymmetric)인지 확인
+
+    - (3) : 중심값 주변에 모여 있는지, 이상치(outlier)가 있는지, 값이 제한되어 있는지 등을 본다
+
+<br/>
+
+- 주요 이산 확룰 분포는 아래와 같다
+
+    - **베르누이 분포 (Bernoulli Distribution)**
+
+        - 한 번의 시행 → 성공/실패 두 가지 결과만 있음
+
+        - 모수: 성공확률 p
+
+    - **이항 분포 (Binomial Distribution)**
+
+        - 동일한 베르누이 시행을 n번 반복했을 때 성공 횟수
+
+        - 모수: 시행 횟수 n, 성공확률 p
+
+    - **기하 분포 (Geometric Distribution)**
+
+        - 첫 번째 성공이 나올 때까지 걸린 시행 횟수
+
+        - 모수: 성공확률 p
+
+    - **음이항 분포 (Negative Binomial Distribution)**
+
+        - r번째 성공이 나올 때까지 걸린 시행 횟수
+
+        - 모수: 성공횟수 r, 성공확률 p
+
+    - **초기하 분포 (Hypergeometric Distribution)**
+
+        - 모집단에서 복원 없이 추출했을 때 성공 개수
+
+        - 모수: 모집단 크기 N, 성공 항목 수 K, 추출 개수 n
+
+    - **포아송 분포 (Poisson Distribution)**
+
+        - 단위 시간/공간 안에 사건 발생 횟수
+
+        - 모수: 평균 발생률 lambda
+
+    - **이산 균등 분포 (Discrete Uniform Distribution)**
+
+        - 유한한 이산 집합에서 모든 값이 동일한 확률로 발생
+
+        - 모수: 최소값 a, 최대값 b
+
+<br/>
+
+### 베르누이 분포 (Bernoulli Distribution)
+
+- **정의** : 한 번의 시행(trial)에서 **성공/실패 두 가지 결과**만 가능한 확률 분포
+
+    - 파라미터: p 
+    
+        - 성공 확률이 p
+        
+        - 실패 확률이 1-p
+     
+    - 가장 기본적인 이산 확률 분포
+ 
+    - 많은 복잡한 분포의 구성 요소 역할을 수행
+
+<br/>
+
+- **베르누이 PMF**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이PMF.png)
+ 
+    - 같은 의미로 다음과 같이 사용한다
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이쉬운공식.png) 
+
+<br/>
+
+- **베르누이 기댓값과 분산**
+
+    - 베르누이 **기댓값** 
+
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이기댓값.png) 
+
+    - 베르누이 **분산**    
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이분산.png)
+     
+    - 기댓값 분산 증명 과정
+ 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이기댓값분산증명.png)
 
 
 
