--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -429,6 +429,8 @@
 
 - **정의** : 한 번의 시행(trial)에서 **성공/실패 두 가지 결과**만 가능한 확률 분포
 
+    - ex: 동전 던지기(앞면, 뒷면), 불량 여부(불량, 정상)
+
     - 파라미터: p 
     
         - 성공 확률이 p
