--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -443,6 +443,15 @@
 
 <br/>
 
+- **베르누이 프로세스**
+
+    - 동일한 베르누이 시행(Bernoulli trial)을 **독립**적으로 여러 번 반복하는 것이 베르누이 프로세스다
+ 
+    - ex: 동전 던지기 예시에서 앞 면이 나올 확률이 0.6, 뒷면이 0.4 이고, 우리가 3번을 던져서 앞면, 뒷면, 앞면이 나올 확률을 구하고 싶다면
+ 
+        - 0.6 x 0.4 x 0.6 으로 구하면 된다 
+<br/>
+
 - **베르누이 PMF**
 
     - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이PMF.png)
