--- a/Probability Theory for AI/Probability Theory for AI study/03-1장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-1장.md
@@ -443,6 +443,12 @@
 
 <br/>
 
+- **베르누이 도식화**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이도식화.png)
+      
+<br/>
+
 - **베르누이 프로세스**
 
     - 동일한 베르누이 시행(Bernoulli trial)을 **독립**적으로 여러 번 반복하는 것이 베르누이 프로세스다
@@ -475,6 +481,7 @@
     - 기댓값 분산 증명 과정
  
     - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장베르누이기댓값분산증명.png)
+
 
 
 
