--- a/Probability Theory for AI/Probability Theory for AI study/03-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/03-2장.md
@@ -1,1 +1,47 @@
-![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-1장임의변수그림.png)
+### 이항(Binomial) 분포
+
+- **정의** : **베르누이** 프로세스에서 정해진 시행 횟수 n 동안의 **성공 횟수**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장이항분포공식.png)
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장조합공식.png)
+    
+    - ex : 동전을 10번 던져서 앞면이 몇 번 나왔나?
+    
+    - 파라미터: n,p
+
+<br/>
+
+- **이항분포 기댓값과 분산**
+
+    - 이항분포 X∼Bin(n,p) 일 때 **기댓값** (여기서 Bin(n,p) : 확률변수 X는 시행 횟수 n, 성공 확률 p인 이항분포를 따른다고 하자는 의미)
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장이항분포기댓값.png)
+     
+   - 이항분포 **분산**
+ 
+       - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장이항분포분산.png)
+    
+<br/>
+
+- **이항분포 기댓값 증명**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장이항분포기댓값증명.png)
+ 
+    - 베르누이 시행은 **한 번의 성공/실패**를 0/1로 나타낸 변수이므로 기댓값이 E[X] = p
+ 
+    - 이항 분포는 베르누이를 n번 한 뒤 성공 확률이므로 E[X] = np
+ 
+        - 즉 성공 확률을 p를 가지고 n번을 도전하는 것과 같음
+     
+        - 실제로 만약 동전을 100번 던지고 앞면이 나올 확률이 0.5이므로 X ~ Bin(100, 0.5) 이므로 공식을 사용해주면, n x p = 100 x 0.5 = 50, 즉 대략 50번이 앞면이 나오는 결과를 얻을 수 있
+     
+
+<br/>
+
+- **이항분포 분산 증명**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/03-2장이항분포분산증명.png)
+ 
+    - 분산도 마찬가지로 n번을 시행함 
+
