--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -60,10 +60,45 @@
      
         - 여기서 곱의 범위는 0~1 이기 때문에 계속 곱하면 작아져서 계산할 때 **로그**를 사용한다
 
+<br/>
 
+### 로지스틱 문제 
 
+- 문제 : 잔액(balance)이 1000달러 일 때, 연체할 확률을 추정하라
 
+    - 즉 Pr(default = Yes | balance)의 값을 구하여라
+ 
+    - **여기서 핵심** : **확률**를 구하라고 했으므로 -> **로직스틱을 이용**해야함
+ 
+        - 만약 **특정 수치에서의 값**을 물어본다면 -> **선형회귀**로 x값을 넣어서 y값 도출 
 
+<br/>
+
+- 문제에서 제공된 표
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시표.png)
+ 
+    - Intercept (절편): -10.6513
+ 
+        - 절편은 -10.6513 → 잔액이 0일 때 기본 log-odds 값 
+
+    - balance (계수): 0.0055
+ 
+        - 잔액이 1 단위(=1달러) 늘어날 때, **로그 오즈(log-odds)** 가 0.0055만큼 증가
+     
+        - 즉, 절편과 계수는 아래 공식에서 β0와 β1을 의미한다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시공식대입.png)
+
+    - 따라서 로그 오즈 공식에다가 β0와 β1을 대입하고 X = 1000을 대입하면 내가 잔액(balance)이 1000달러일 때, 연체할 확률이 도출된다
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시연체확률공식대입.png)
+     
+             - 즉, 잔액이 1000달러일 때 연체 확률은 0.006 -> 매우 낮음
+         
+         - 만약 잔액이 2000달러라면 ?
+     
+             - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시연체확률공식대입2.png)
 
 
 
