--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -89,6 +89,8 @@
         - 즉, 절편과 계수는 아래 공식에서 β0와 β1을 의미한다
      
         - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시공식대입.png)
+          
+    <br/>
 
     - 따라서 로그 오즈 공식에다가 β0와 β1을 대입하고 X = 1000을 대입하면 내가 잔액(balance)이 1000달러일 때, 연체할 확률이 도출된다
  
@@ -99,6 +101,12 @@
          - 만약 잔액이 2000달러라면 ?
      
              - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장문제예시연체확률공식대입2.png)
+
+<br>
+
+- 예시를 바꿔서 학생일 때 연체할 확률을 구해보자
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장학생연체확률.png)
 
 
 
