--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -108,8 +108,33 @@
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장학생연체확률.png)
 
+<br/>
 
+### 로지스틱 회귀(Logistic Regression)와 선형 분류 경계
 
+- 위에서 로지스틱과 로즈 오즈 공간을 통해 비선형 공간과 선형 공간을 자유롭게 이동할 수 있다고 하였다.
+
+    - 또한 아래 공식으로 변환할 수 있다고 배웠다 
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장로그오즈공간2.png)
+
+<br/>
+
+- 이제 이 변환을 어떻게 하는지 상세하게 확인해보자
+
+    - 일반적인 로지스틱 모델에서는 클래스가 2개이다 (다항 로지스틱도 존재하지만 여기선 2개라고 가정)
+ 
+        - 클래스가 두 개일때 대표적인 사후확률(posterior probabilities)은 아래와 같다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장사후모델종류.png)
+
+            - Pr(G=2∣X=x) 의 분자가 1인 이유는 아래와 같다
+         
+                - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장사후확률증명1.png)
+             
+                - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장사후확률증명2.png)
+             
+        - 즉, 위 공식에 대입해서 선형 공간으로 매핑할 수 있다 
 
 
 
