--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -139,8 +139,39 @@
 
 - **컨볼루션(Convolution)** : 각 화소에 필터u 를 적용해 곱의 합을 구하는 연산
 
-## p.10부터 
+    - Input 영상에서 커널을 거쳐 의미있는 feature를 검출 
 
+<br/>
+
+- **컨볼루션(Convolution) 공식**
+
+    - 1차원 컨볼루션 
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장컨볼루션공식1.png)
+ 
+        - w : 커널의 너비
+     
+        - h : 커널의 높이
+     
+        - u(i)f(x+i)는 내적의 의미
+     
+            - ![System Resources](../../images/Computer%20Vision%20images/02-1장컨볼루션내적공식예시.png)
+     
+        - 시그마 범위는 커널 크기에 의해 위와 같이 정해짐 
+
+    <br/>
+
+    - 2차원 컨볼루션 
+
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장컨볼루션공식2.png)
+ 
+        - 예시
+     
+        - ![System Resources](../../images/Computer%20Vision%20images/02-1장컨볼루션공식2예시자료.png)
+
+    
+
+    
 
 
 
