--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -1,4 +1,4 @@
-### 세 종류의 영상 처리 연산
+<img width="69" height="92" alt="image" src="https://github.com/user-attachments/assets/a4cfa081-2158-4deb-802d-4137300e86f7" />### 세 종류의 영상 처리 연산
 
 - 영상을 처리할 때, 화소(픽셀)의 값을 새로 계산하는 방법은 화소가 새로운 값을 **어디서 받느냐**에 따라크게 3가지가 존재한다
 
@@ -169,15 +169,86 @@
      
         - ![System Resources](../../images/Computer%20Vision%20images/02-1장컨볼루션공식2예시자료.png)
 
-    
+<br/>
 
-    
+- 필터의 종류
+
+    - 스무딩 필터 (Smoothing filter)
+
+        - 평균값으로 주변을 부드럽게 → 노이즈 제거, 블러 효과
+
+    - 가우시안 필터 (Gaussian filter)
+
+        - 가까운 픽셀에 더 큰 가중치 → 자연스러운 블러, 노이즈 제거
+
+    - 샤프닝 필터 (Sharpening filter)
+
+        - 중심 강조, 주변 억제 → 경계(엣지) 강조, 이미지 선명화
+
+    - 엠보싱 필터 (Embossing filter)
+
+        - 특정 방향 밝기 차이 강조 → 입체적(양각/음각) 효과
+
+<br/>
+
+### 스무딩 필터 (Smoothing filter)
+
+- **스무딩 필터** : 이미지를 **부드럽게** 하여 **노이즈를 제거**하거나 **경계를 흐리게** 함
+
+    - 스무딩 필터를 적용하면 사진이 전체적으로 흐릿해지면서 노이즈를 없애는게 목적
+ 
+    - 블러 효과와 유사함
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장스무딩필터적용예시자료.png)
+
+<br/>
+
+- **스무딩 필터 원리** : 주변값을 전부 더해 **평균**을 낸다
+
+    - 픽셀의 큰 값은 줄고, 작은 값은 올라가면서 평균에 가까워짐
+ 
+    - 결과적으로 모든 픽셀이 중간 톤(평균값) 에 가까워짐
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장스무딩필터예시필터모음.png)
+
+<br/>
+
+### 가우시안 필터 (Gaussian filter)
+
+- 스무딩 필터는 모든 픽셀을 동등하게 생각함
+
+    - 하지만 이렇게 되면 **중심에 가까운 픽셀**이 더 중요한 경우, 그 차이를 **고려하지 못함**
+ 
+    - 따라서 **가우시안 필터**는 **중심에 가까운 픽셀에 더 큰 비중(가중치)** 을 준다
+ 
+        - 중심과 가까운 정보는 많이 반영, 멀리 있는 정보는 조금만 반영 → 더 자연스러운 흐림효과
+     
+        - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터3D그래프자료.png)
+
+<br/>
+
+- **가우시안 필터 공식**
+
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터공식자료.png)
+ 
+    - G(x,y): (x,y) 좌표에 해당하는 가중치 값
+ 
+    - 𝜎: 분산(표준편차), 블러의 강도를 조절하는 파라미터
+ 
+        - σ가 **크면** → **더 넓게** 퍼짐 → 흐림 효과 **강해짐**
+ 
+        - σ가 **작으면** → **좁게** 집중 → 흐림 효과 **약해짐**
 
 
-
-
-
-
+    - 추가적으로 가중치 공식에 존재하는 아래 공식은 정규화의 역할을 한다
+ 
+        - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터정규화공식.png)
+     
+        - **증명과정**
+     
+            - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터정규화공식증명과정.png)
+         
+            - 이렇게 정규화를 하지 않으면 의도치 않은 밝기의 변화가 생기게 된다 
 
 
 
