--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -250,7 +250,19 @@
          
             - 이렇게 정규화를 하지 않으면 의도치 않은 밝기의 변화가 생기게 된다 
 
+<br/>
 
+- **가우시안 필터 활용 예시**
+
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터활용문제예시.png)
+ 
+        - 왼쪽 상단을 (0,0)이라 가정하고 시행한 것이다
+     
+        - 가운데 소수점으로 이루어진 행렬은 G(x,y)를 통해 나온 값이고 마지막 정수 행렬은 소수점 행렬을 보기 쉽게 하귀 위해 정수로 변경한 것이고 1/16은 정규화를 진행한 것이다 
+     
+            - 여기서 **중요한 것**은 정규화를 할 때 각 화소당 비율로 나누는게 아니라 **모든 화소의 합으로 나눠야 한다**
+         
+            - 
 
 
 
