--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -262,8 +262,11 @@
      
             - 여기서 **중요한 것**은 정규화를 할 때 각 화소당 비율로 나누는게 아니라 **모든 화소의 합으로 나눠야 한다**
          
-            - 
-
+            - 각 화소당 비율을 4배를 해줘서 대략 정수로 맞췄다고 가정하자
+         
+            - 이 경우 비율 만큼 1/4로 전체를 나눠주면 모든 픽셀의 합이 1이 나오지 않는다
+         
+            - **정규화**란 **모든 픽셀의 합이 1**이 되는 기법이다
 
 
 
