--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -224,6 +224,9 @@
         - 중심과 가까운 정보는 많이 반영, 멀리 있는 정보는 조금만 반영 → 더 자연스러운 흐림효과
      
         - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터3D그래프자료.png)
+     
+        - ![System Resources](../../images/Computer%20Vision%20images/02-1장가우시안필터예시그림자료.png)
+        
 
 <br/>
 
@@ -268,9 +271,31 @@
          
             - **정규화**란 **모든 픽셀의 합이 1**이 되는 기법이다
 
+<br/>
 
+### 샤프닝 필터 (Sharpening filter)
 
+- **샤프닝 필터** : 영상을 보다 **선명하기** 위해 사용하는 필터
 
+    - **핵심 원리** : **미분**을 이용하여 밝기의 **변화율을 측정하여 경계를 찾아내서** 그 부분을 강조함
+
+    - 여기서 2차 미분으로 경계를 파악한다. 아래 예시를 통해 공부
+ 
+        - 1차 미분: 길이 오르막인지, 내리막인지 확인하는 것. (변화 방향 감지)
+
+        - 2차 미분: 언제 오르막에서 내리막으로 바뀌는지 확인하는 것. (변화가 급격히 일어나는 지점 → 경계 강조)
+
+<br/>
+
+- **미분 공식**
+
+    - **1차 미분 공식** 
+
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장샤프팅필터1차미분공식.png)
+ 
+    - **2차 미분 공식**
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/02-1장샤프팅필터2차미분공식.png)
 
 
 
