--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -136,11 +136,57 @@
              
         - 즉, 위 공식에 대입해서 선형 공간으로 매핑할 수 있다 
 
+<br/>
 
+### 선형 분류 전반의 원리
 
+- K개의 클래스가 있다고 가정하고, 각 클래스를 1, 2, ..., K로 표시한다고 하자 
 
+    - 이때 k번째 클래스에 대해 적합된 선형 모델은 f_k(x) = β^k0 + β^kT x 이다
+ 
+<br/>
 
+- 클래스 k와 클래스 ℓ 사이의 **결정 경계**는 **fk(x) = fℓ(x)** 인 점들의 집합이다
 
+    - 쉽게 말해서 어떤 점 x가 두 클래스에 **똑같이 속할** 가능성이 있는 위치가 두 클래스 사이의 경계선(또는 면)이다
+ 
+        - ex: 55 ~ 65점 = c등급이라하고, 65 ~ 75 = B등급 75 ~ 100 = A등급이라고 하자
+ 
+            - 이때 C등급과 B등급의 경계선은 65점이다
+
+    <br/>
+    
+    - 똑같이 속할 가능성이 존재한 fk(x) = fℓ(x)의 공식을 전개해보자
+ 
+        - f_k(x) = β^k0 + β^kT x 
+        
+        - f_ℓ(x) = β^ℓ0 + β^ℓT x 이므로 두 함수가 같다고 한 뒤 이항해주면 
+     
+            - (β^​k0​ − β^​ℓ0​) + (β^​k ​− β^​ℓ​)Tx = 0 이다
+         
+            - 즉 이것이 k 클래스와 ℓ 클래스의 결정경계이다
+         
+                - 차원에 따라 직선, 평면, 초평면이라고도 불린다  
+
+    <br/>
+
+    - 이러한 회귀 접근법은 각 클래스에 대해 판별 함수 δk(x)를 모델링하고, 입력 x를 판별 함수 값이 가장 큰 클래스에 할당하는 방법의 일종이다
+ 
+        - δk(x) : 클래스 k에 속할 정도(점수)를 계산하는 함수
+
+        - 만약 판별 함수 δk(x) 또는 사후 확률 Pr(G=k∣X=x)가 x에 대해 선형이라면, 결정 경계 역시 선형이다
+     
+            - 즉, 점수나 확률이 입력 x의 직선식으로 표현되면, 클래스 사이의 경계도 직선(또는 평면)이 된다 
+
+<br/>
+
+### 다항 로지스틱 회귀
+
+- 로지스틱 회귀 모델은 K개의 클래스에 대한 사후 확률(posterior probabilities)을 x의 선형 함수로 모델링하려는 데서 출발한다
+
+    - 동시에 이 확률들이 모두 더하면 1이 되고, 각 확률은 **[0, 1]** 구간에 있도록 보장한다
+ 
+    - 모든 클래스 확률의 합이 1이 되도록 **softmax** 형태를 사용
 
 
 
