--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -187,8 +187,22 @@
     - 동시에 이 확률들이 모두 더하면 1이 되고, 각 확률은 **[0, 1]** 구간에 있도록 보장한다
  
     - 모든 클래스 확률의 합이 1이 되도록 **softmax** 형태를 사용
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀소프트맥스공식.png)
+     
+        - 클래스 k (마지막 클래스 K를 제외한 경우)에 속할 확률은 해당 선형조합을 지수화(exp) 한 값을, 모든 클래스들의 지수 합으로 나눈 형태
+     
+            - 마지막 클래스 K를 제외한 이유는 아래와 같이 모든 클래스의 확률 합은 1이기 때문에 자동으로 K값이 결정되기 때문
+     
+            - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀K번째소프트맥스공식.png)
 
+<br/>
 
+- 다항 로지스틱 회귀에서 소프트맥스와 동등한 공식으로 기준 클래스를 잡아서 표현할 수도 있다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀기준클래스공식.png)
+ 
+    - 이전에 나온 공식을 분모 분자에 두면 각 분모의 지수화(exp) 한 값이 약분이 되고, 해당 식에 로그를 취하면 k번째 클래스와 K 클래스의 (즉, 임의의 클래스와 기준 K) 결정 경계를 나타내는 공식이 된다 
 
 
 
