--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -195,6 +195,10 @@
             - 마지막 클래스 K를 제외한 이유는 아래와 같이 모든 클래스의 확률 합은 1이기 때문에 자동으로 K값이 결정되기 때문
      
             - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀K번째소프트맥스공식.png)
+         
+            - 추가적으로 위 공식에 대한 증명은 아래와 같다
+         
+            - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀K번째소프트맥스공식증명.png)
 
 <br/>
 
