--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -208,6 +208,14 @@
  
     - 이전에 나온 공식을 분모 분자에 두면 각 분모의 지수화(exp) 한 값이 약분이 되고, 해당 식에 로그를 취하면 k번째 클래스와 K 클래스의 (즉, 임의의 클래스와 기준 K) 결정 경계를 나타내는 공식이 된다 
 
+    - 이렇게 구해서 나온 파라미터 베타를 세타 집합으로 표현하면 아래와 같다
+ 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀베타집합.png)
+ 
+    - 즉 입력 X = x가 주어졌을 때, 클래스 G = k일 확률은 아래와 같이 단순히 데이터 
+x만으로 정해지는 게 아니라, 학습된 파라미터 θ 도 같이 판단을 해서 값을 구한다
+
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀세타를이용한확률표현.png)
 
 
 
