--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -187,6 +187,16 @@
 
 ### 3 주차
 
+- **요약정리**
+
+    - EPE : 선형회귀 오차 분석
+
+    - RSS : 선형회귀 최적의 베타
+
+    - 최대 가능도(maximum likelihood) : 로지스틱의 최적의 베타 
+
+<br/>
+
 - **기대 제곱 예측 오차(Expected squared prediction error, EPE)**
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/EPE.png) 
