--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -1,1 +1,112 @@
+### TF-IDF 장단점 
+
+- **장점**
+
+    - TF-IDF 벡터는 문서에서 특정 단어들이 **얼마나 중요한지 추정**하는데 큰 도움이 됨
+ 
+    -  n-그램에 대해서도 TF-IDF를 계산 가능
+ 
+        - 단어뿐 아니라 연속된 단어 묶음(예: '인공지능 연구')에도 적용 가능
+     
+<br/>
+
+- **한계점**
+
+    - (1) : TF-IDF 벡터의 경우 유의어들이 **서로 다른 토큰일 경우** 아예 다른 벡터 성분으로 표현됨
+ 
+        - ex: '자동차'와 '승용차'처럼 같은 뜻이어도 TF-IDF는 다른 단어로 취급
+     
+        - 따라서 **같은 주제를 다루지만** 구성하는 단어가 다른 두 문장, 문서의 경우 TF-IDF **벡터 공간에서 가깝지 않을 확률**이 높음 
+
+    - (2) : 어간 추출 및 표제어 추출은 이를 좀 더 보완할 수 있으나 이 역시 완벽하지 않고, 토큰 단계에서 유의어 등을 통합 처리하지 못하면 벡터상에서 다른 차원으로 갈라지게 됨
+ 
+        - 즉, 단어 뿌리(예: 'run', 'running' → 'run')를 맞추는 기법을 쓰면 조금 나아지지만, 완벽히 해결되지 않는다
+     
+    - (3) : TF-IDF 벡터를 더하거나 빼면 문서의 단어 빈도에 대한 정보가 나오며 곱하더라도 각 차원을 나타내는 단어 간의 상관관계에 대한 정보만 나온다
+ 
+        - 즉, TF-IDF 값끼리 연산해도 단순히 "단어 개수/상관 정도"만 알 수 있고, 의미는 알 수 없다
+     
+        - 단어의 의미에 대한 **정보를 추출할 수는 없다**
+     
+<br/>
+
+- **한계점에 대한 가능성**
+
+    - **단어의 의미를 벡터**로 표현할 수 있다면 이를 기반으로 문서/문장의 벡터도 표현 가능하고 단어 벡터끼리의 연산도 가능한 등 TF-IDF 벡터를 사용할 때 보다 더 많은 가능성이 열린다
+ 
+        - 단어 벡터를 나타내기 위해 각 행은 단어를, 각 열은 특정 주제나 속성을 나타낸 행렬을 **단어-주제 행렬**이라고 하며 TF-IDF만으로는 이러한 행렬을 구할 수 없음
+
+<br/>
+
+### 단어-주제 벡터 
+
+- 각 단어별로 각 주제에 대해 어느 정도의 속성을 갖고 있는지를 나타냄
+
+    - 이와 같은 행렬을 만들 수 있다면, [(‘Car’), (‘Animal’), (‘Environment’)] 로 이루어진 각 단어에 대한 벡터를 단어의 의미를 나타내는 벡터로 활용할 수 있음
+ 
+    - 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
