--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -44,7 +44,25 @@
 
     - 이와 같은 행렬을 만들 수 있다면, [(‘Car’), (‘Animal’), (‘Environment’)] 로 이루어진 각 단어에 대한 벡터를 단어의 의미를 나타내는 벡터로 활용할 수 있음
  
-    - 
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장단어주제벡터예시자료car동물환경.png)
+ 
+    - 기본적인 원리를 설명하자면
+ 
+        - (1) : 불용어를 제외한 토큰을 행렬의 열 부분에 나열하고 주제를 행 부분에 나열
+     
+        - (2) : 각 단어의 TF-IDF 값에 해당 단어와 주제의 연관도를 곱해서 모두 취합함
+     
+            - 가중치는 기계학습을 통해 학습 (단어와 주제의 관계에 따라 학)
+
+<br/>
+
+
+
+
+
+
+
+ 
 
 
 
