--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -56,6 +56,9 @@
 
 <br/>
 
+- 주제 공간 벡터의 예시는 아래와 같다
+
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장주제벡터함수예시자료.png)
 
 
 
