--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -60,10 +60,33 @@
 
     - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장주제벡터함수예시자료.png)
 
+<br/>
 
+### 잠재 의미 분석(Latent Semantic Analysis, LSA) 아이디어와 배경 
 
+- **잠재 의미 분석(Latent Semantic Analysis, LSA)** :  단어와 문서 속에 직접 드러나지 않는 숨은 의미 관계를 수학적으로 찾아내는 기법
 
+- 앞에서 가중치는 컴퓨터가 직접 학습을 하여 정해준다고 배웠다
 
+    - 어떻게 컴퓨터가 알고리즘적으로 단어의 의미를 파악하여 주제와의 연관도를 매길 수 있을까?
+ 
+    - 20세기에 활동한 영국의 언어학자 J.R. Firth는 '단어를 알려면 그 일행을 봐야 한다.'라는 말을 남겼으며 여기에서 힌트를 얻어서 의미 분석 및 이후의 **워드 임베딩** 기술이 발전하여 이것을 활용하고 있음
+ 
+        - **워드 임베딩의 원리** : 어떤 단어의 의미는 **같이 출현하는 단어들로부터 추론**할 수 있다는 의미
+ 
+        - BoW 및 TF-IDF에서는 이미 같이 출현하는 단어들의 상대적인 빈도 정보를 포함하고 있음
+
+<br/>
+
+- 따라서 의미 분석에서는 여러 문서들의 TF-IDF 벡터를 모은 문서-벡터 행렬을 기반으로 단어들의 의미를 분석함
+
+    - 가장 핵심이 되는 기법으로 단어의 숨은 의미를 파악한다는 뜻의 잠재 의미 분석(LSA)가 있음
+ 
+    - LSA의 목적 : 단어가 가진 **숨겨진 의미(문맥적 의미)** 를 찾아내는 것
+ 
+    - LSA는 TF-IDF행렬(또는 BoW 행렬)을 분석해서 단어들을 주제들로 요약하는 알고리즘의 일종
+ 
+        - LSA보다 더 단순한 기법으로 LDA(선형 판별 분석)도 존재함 
 
  
 
