--- a/Artificial Neural Network/Artificial Neural Network study/03-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/03-2장.md
@@ -187,6 +187,9 @@
     - 동시에 이 확률들이 모두 더하면 1이 되고, 각 확률은 **[0, 1]** 구간에 있도록 보장한다
  
     - 모든 클래스 확률의 합이 1이 되도록 **softmax** 형태를 사용
+
+    - 즉,  **softmax의 목표**는 K개 클래스의 선형점수를 exp로 변환해 **모든 확률이 [0,1] 이고 합이 1이 되도록 보장**하기 위함 
+    
  
         - ![System Resources](../../images/Artificial%20Neural%20Network%20images/03-2장다항로지스틱회귀소프트맥스공식.png)
      
