--- a/Artificial Neural Network/Artificial Neural Network study/04-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/04-1장.md
@@ -1,1 +1,11 @@
+### 성능 평가(Performance Assessment) 가 필요한 이유 
 
+- **The Fundamental Problem (근본적인 문제)**
+
+    - 우리는 새로운, 본 적 없는 데이터를 예측하기 위해 모델을 만들지만 모델 개발 단계에서는 학습 데이터밖에 쓸 수 없다
+ 
+        - 즉, 모델이 처음 보는 데이터에 대해 잘 작동하는지 알 수 없음 
+
+<br/>
+
+- 예시 : 
