--- a/Discrete Structures/Discrete Structures study/04-1장.md
+++ b/Discrete Structures/Discrete Structures study/04-1장.md
@@ -1,1 +1,176 @@
+### 알고리즘 
+
+- **알고리즘** : 산을 수행하거나 문제를 해결하기 위한 유한 개의 정확한 지시문
+
+    - 즉, 알고리즘은 **끝없이 반복되지 않고**, 반드시 멈추며(유한), 모호하지 않은 **명확한** 단계로 이루어져야 함
+    - 
+<br/>
+
+- **예시** : 유한한 정수의 수열에서 최댓값을 찾는 알고리즘을 설명하시오
+
+    - (1) : 임시 최대값을 수열의 첫 번째 정수로 설정한다
+ 
+    - (2) : 다음 정수를 임시 최대값과 비교
+ 
+        - 만약 다음 정수가 임시 최대값보다 크면, 임시 최대값을 그 정수로 바꾼다
+ 
+    - (4) : 수열에 정수가 더 있으면 위 단계를 반복하라. 없으면 멈춘다
+ 
+    - (5) : 알고리즘이 끝나면, 임시 최대값은 수열에서 가장 큰 정수이다 
+
+<br/>
+
+ - 위 예시의 의사코드는 아래와 같다
+
+```ruby
+procedure max(a1, a2, …, an: integers)
+    max := a1
+    for i := 2 to n
+        if max < ai then max := ai
+    return max {max is the largest element}
+```
+<br/>
+
+- 알고리즘은 **여러 방식으로 표현**이 가능하다. 그 단계들은 영어 문장이나 **의사코드(pseudocode)** 로 기술될 수 있다
+
+    - **의사코드(pseudocode)** : 영어로 된 설명과 프로그래밍 언어로 작성된 코드 사이의 중간 단계이다
+ 
+    - 의사코드는 특정 프로그래밍 언어에 의존하지 않고, 알고리즘을 사용해 문제를 푸는 데 걸리는 시간을 분석하는 데 도움을 준다
+
+<br/>
+
+- 알고리즘은 원하는 형태의 **모든 문제에 대해 동작**해야 한다
+
+<br/>
+
+### Searching Problems (탐색 문제)
+
+- **Searching Problems (탐색 문제)** : 구별되는 원소들로 이루어진 리스트 a1, a2, …, an 안에서 특정 원소 x를 찾거나, 그 원소가 리스트 안에 없는지 판별하는 것
+
+<br/>
+
+- **탐색 문제 종류**
+
+    - **선형 탐색 (Linear Search)**
+ 
+        - 리스트의 처음부터 끝까지 차례대로 비교하며 원하는 값을 찾음
+        
+        - 정렬 불필요
+        
+        - O(n))
+     
+    <br/>
+
+    - **이진 탐색 (Binary Search)**
+    
+        - 정렬된 리스트에서 중간값과 비교하며 범위를 절반씩 줄여 찾음
+        
+        - 정렬 필요
+        
+        - O(log n))
+
+<br/>
+
+-  **Linear Search Algorithm (선형 탐색 알고리즘)**
+
+    - 리스트의 처음부터 시작하여 **원소를 하나씩 차례대로 검사**하며 원하는 항목을 찾는다
+ 
+        - (1) : 먼저 x를 a1과 비교한다. 만약 a1에서 원하는 원소를 바로 찾았다면 위치 1을 반환
+     
+        - (2) : 그렇지 않다면, a2를 확인한다. 만약 x = a2라면 위치 2를 반환한다
+     
+        - (3) : 계속 진행하다가, 전체 리스트를 다 확인했는데도 일치하는 값이 없으면 0을 반환
+
+<br/>
+
+-  **Linear Search Algorithm (선형 탐색 알고리즘) 의사코드**
+  
+```ruby
+procedure linear search(x: integer, a1, a2, …, an: distinct integers)
+    i := 1
+    while (i ≤ n and x ≠ ai)
+        i := i + 1
+    if i ≤ n then location := i
+    else location := 0
+    return location {location is the subscript of the term that equals x,
+                     or is 0 if x is not found}
+```
+
+<br/>
+
+### Binary Search Algorithm (이진 탐색 알고리즘)
+
+- 입력은 오름차순으로 정렬된 리스트라고 가정한다
+
+    - 즉, 이진 탐색은 **정렬된 리스트에서만** 사용할 수 있다 
+
+- 이진 탐색 알고리즘은 찾고자 하는 원소를 **리스트의 중간 원소와 비교**하면서 시작한다
+
+    - 중간값을 기준으로 크기를 비교해 **탐색 범위를 절반**으로 줄이는게 핵심
+
+ <br/>
+
+ - **알고리즘 과정**
+
+    - (1) : 만약 중간 원소가 더 작다면, 탐색은 리스트의 윗부분(중간 이후)으로 진행된다
+ 
+    - (2) : 그렇지 않다면, 탐색은 리스트의 아랫부분(중간까지 포함)으로 진행된다
+ 
+    - (3) : 리스트 크기가 1이 될 때까지 이 과정을 반복
+  
+        - 찾고 있는 원소가 리스트에 있는 원소와 같다면, 그 위치를 반환
+     
+        - 못찾으면 찾는 원소가 없다는 뜻으로 0을 반환
+        
+<br/>
+
+- 19를 찾는 예시
+
+    - 
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
