--- a/Discrete Structures/Discrete Structures study/04-1장.md
+++ b/Discrete Structures/Discrete Structures study/04-1장.md
@@ -124,17 +124,77 @@ procedure linear search(x: integer, a1, a2, …, an: distinct integers)
         
 <br/>
 
-- 19를 찾는 예시
+- **숫자 19를 찾는 예시**
 
-    - 
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장이진탐색알고리즘19를찾는예시과정.png)
 
+<br/>
+
+- **이진 탐색 알고리즘 의사 코드**
+  
+```ruby
+procedure binary search(x: integer, a1, a2,…, an: increasing integers)
+    i := 1 {i is the left endpoint of interval}
+    j := n {j is right endpoint of interval}
+    while i < j
+        m := ⌊(i + j)/2⌋
+        if x > am then i := m + 1
+        else j := m
+    if x = ai then location := i
+    else location := 0
+    return location {location is the subscript i of the term ai equal to x,
+                     or 0 if x is not found}
+```
+
+<br/>
+
+### Sorting (정렬)
+
+- 리스트의 원소들을 정렬(sort)한다는 것은 그것들을 **오름차순으로 배열**하는 것이다
+
+<br/>
+
+- **정렬이 중요한 이유**
+
+    - 전체 컴퓨팅 자원의 상당 부분이 다양한 리스트를 정렬하는 데 사용된다
+
+    - 특히, 고객, 부품 번호 등 특정 순서로 데이터를 보여줘야 하는 대규모 데이터베이스 응용에서 그렇다
+
+<br/>
+
+- **정렬의 종류**
+
+    - **버블 정렬 (Bubble Sort)**
+
+        - 아이디어: 인접한 두 원소를 비교해 잘못된 순서라면 교환, 이 과정을 여러 번 반복
+
+        - 특징: 큰 값이 매 반복마다 거품처럼 뒤로 밀려가며 정렬됨
+
+        - 시간 복잡도: 평균/최악 O(n²).
+
+    - **삽입 정렬 (Insertion Sort)**
+
+        - 아이디어: 두 번째 원소부터 시작해, 앞쪽의 정렬된 부분에 적절한 위치를 찾아 삽입.
+
+        - 특징: 사람이 카드를 정렬하는 방식과 유사, 작은 입력에 효율적.
+
+        - 시간 복잡도: 평균/최악 O(n²), 최선 O(n) (이미 거의 정렬된 경우).
+
+<br/>
+
+### 버블 정렬 (Bubble Sort) 
+
+- 인접한 두 원소를 비교해 잘못된 순서라면 교환, 이 과정을 여러 번 반복
+
+    - 특징: 큰 값이 매 반복마다 거품처럼 뒤로 밀려가며 정렬됨
+
+    - 시간 복잡도: 평균/최악 O(n²)
  
+<br/>
 
+- **버블 정렬 (Bubble Sort) 예시**
 
-
-
-
-
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장버블정렬예시과정.png)
 
 
 
