--- a/Discrete Structures/Discrete Structures study/04-1장.md
+++ b/Discrete Structures/Discrete Structures study/04-1장.md
@@ -196,20 +196,101 @@ procedure binary search(x: integer, a1, a2,…, an: increasing integers)
 
     - ![System Resources](../../images/Discrete%20Structures%20images/04-1장버블정렬예시과정.png)
 
+<br/>
 
+- **버블 정렬 의사 코드**
 
+```ruby
+procedure bubblesort(a1,…,an : real numbers with n ≥ 2)
 
+    for i := 1 to n − 1
+        for j := 1 to n − i
+            if aj > aj+1 then interchange aj and aj+1
 
+{a1,…, an is now in increasing order}
+```
 
+<br/>
 
+### 삽입 정렬 (Insertion sort)
 
+- 두 번째 원소부터 시작해, 앞쪽의 정렬된 부분에 적절한 위치를 찾아 삽입
 
+    - 특징: 사람이 카드를 정렬하는 방식과 유사, 작은 입력에 효율적
+    
+    - 시간 복잡도: 평균/최악 O(n²), 최선 O(n) (이미 거의 정렬된 경우)
 
+<br/>
 
+- **삽입 정렬 과정**
 
+    - (1) : 두 번째 원소부터 시작한다. 두 번째 원소와 첫 번째 원소를 비교하여, 더 작으면 첫 번째 원소 앞에 삽입
 
+    - (2) : 그다음 세 번째 원소를 앞의 세 원소 중 올바른 위치에 삽입
+ 
+    - (3) : 이후 반복에서는 (n+1)번째 원소를 앞의 n+1개 원소 중 올바른 위치에 삽입
 
+<br/>
 
+- 삽입 정렬 예시
+
+![System Resources](../../images/Discrete%20Structures%20images/04-1장삽정렬예시과정.png)
+
+<br/>
+
+### Big-O Notation
+
+- f와 g가 정수나 실수 집합에서 실수 집합으로 가는 함수라고 하자. f(x)가 O(g(x))라는 말은 어떤 상수 C와 k가 존재해서 모든 x가 k보다 클 때, f(x)의 절댓값이 C배 g(x)의 절댓값보다 작거나 같음을 의미한다
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법자료사진.png)
+ 
+    - 이를 “f(x)는 g(x)의 Big-O다” 또는 “g가 f를 점근적으로 지배한다"라고 읽는다
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법함수비교사진.png)
+
+<br/>
+
+- **Big-O Notation 추가내용**
+
+    - 한 쌍의 증인(C, k)을 찾으면, 무한히 많은 다른 쌍도 존재
+ 
+    - k나 C 값을 더 크게 잡아도 부등식은 여전히 성립
+ 
+        - 만약 C′가 C보다 크고, k′가 k보다 크다면 (C′, k′) 역시 증인이 된다
+     
+    - “f(x) = O(g(x))”라고 쓰는 경우도 있는데, **정확히는 f(x) is O(g(x))** 가 맞다
+ 
+        - 하지만 이는 등호를 잘못 쓴 것이고, 실제 의미는 f와 g 사이의 부등식을 말하는 것이다
+     
+        - 올바른 표기는 f(x) ∈ O(g(x))이고, O(g(x))는 g(x)의 Big-O에 해당하는 함수들의 집합을 의미한다
+     
+        - 보통 절댓값 기호(| |)는 생략하는데, 우리가 다루는 함수들은 항상 양수 값만 가지기 때문이다
+
+<br/>
+
+### Big-O Notation 증명 문제 
+
+- 다음을 증명하시오
+
+- ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제1.png)
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제1풀이과정.png)
+ 
+<br/>
+
+- 다음을 증명하시오
+
+- ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제2.png)
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제2번풀이과정.png) 
+
+<br/>
+
+- 다음을 증명하시오
+
+- ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제3번.png)
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제3번풀이과정.png) 
 
 
 
