--- a/Discrete Structures/Discrete Structures study/04-1장.md
+++ b/Discrete Structures/Discrete Structures study/04-1장.md
@@ -292,8 +292,27 @@ procedure bubblesort(a1,…,an : real numbers with n ≥ 2)
 
     - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법예시문제3번풀이과정.png) 
 
+<br/>
 
+### Big-O Estimates for Polynomials
 
+- **다항식(polynomial)** 은 최고차항의 차수에 따라 Big-O가 결정된다
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장빅오표기법다항식풀이과정.png) 
+
+<br/>
+
+### Big-O Estimates 문제 
+
+- 중요 함수에 대한 Big-O (1)
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장주요함수에대한빅오표기법.png) 
+
+<br/>
+
+- 중요 함수에 대한 Big-O (2)
+
+    - ![System Resources](../../images/Discrete%20Structures%20images/04-1장주요함수에대한빅오표기법2번째.png) 
 
 
 
