--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -144,6 +144,46 @@
 
 ## p.34~ 
 
+<br/>
+
+### 3주차 
+
+- set (집합) : 순서 x
+
+- Tuples (튜플) : 순서 존재, 순서
+
+- Cartesian Product (카티션 곱) : 모든 가능한 조합
+
+    - ex: A = {a,b}, B = {1,2,3}
+
+    - A × B = {(a,1),(a,2),(a,3),(b,1),(b,2),(b,3)} 
+
+ <br/>
+
+- 함수
+
+    - Domain (정의역) = 입력 집합
+
+    - Codomain (공역) = 가능한 출력 전체
+
+    - Range (치역) = 실제로 나온 출력들
+
+    - Image (상) = 입력에 대응된 출력
+
+    - Preimage (원상) = 어떤 출력에 연결된 입력
+ 
+    - 전사 : 공역(출력 집합)의 모든 원소가 반드시 연결
+
+    - 단사 : 다른 입력은 반드시 다른 출력으로 간다
+     
+    - 두 함수가 같다 = 정의역, 공역, 대응 결과 모두 동일해야 함
+
+<br/>
+
+- 함수 종류
+
+    - Injective ( 전사 ,일대일 함수) : f(a) = f(b)일 때 항상 a = b여야 한다
+ 
 
 
 
