--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -182,8 +182,43 @@
 
 - 함수 종류
 
-    - Injective ( 전사 ,일대일 함수) : f(a) = f(b)일 때 항상 a = b여야 한다
+    - 일대일 함수 : f(a) = f(b)일 때 항상 a = b여야 한다
  
+        - 출력값이 안겹치면 됨. 전사가 아니여도 상관 x
+     
+    - Surjective (전사 함수) : 공역에 있는 원소가 빠짐없이 모두 선택된 함수
+ 
+    - 일대일대응 : 입력이 겹치지 않고( = 단사, injective ), 출력이 빠짐없이 다 쓰이는( = 전사, surjective ) 함수
+ 
+        - 일대일 함수 + 전사 개념
+     
+    - Inverse Function (역함수)
+ 
+        - f가 전단사(bijection)가 아니면 역함수는 존재하지 않는다
+     
+        - 역함수를 증명하기 위해선 일대일 대응만 증명하면 된다
+
+    - 합성 함수 : f와 g의 합성 함수 f∘g는 A에서 C로 가는 함수
+ 
+    - 바닥 함수 : f(x) = ⌊x⌋ : x보다 작거나 같은 정수 중 가장 큰 값
+ 
+    - 천장 함수 : f(x) = ⌈x⌉ :  x보다 크거나 같은 정수 중 가장 작은 값
+
+<br/>
+
+- sequence (수열) : 정수의 부분집합에서 어떤 집합 S로 가는 함수
+
+    - 정수의 부분집합에서 어떤 집합 S로 가는 함수
+ 
+    - arithmetic progression (등차수열)
+ 
+    - recurrence relation (점화식) : an으로 표현 
+ 
+    - Summations (합) : 시그마
+ 
+    - product notation (곱) : 파이(∏)로 곱을 표현 
+
+
 
 
 
