--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -150,13 +150,46 @@
 
 - set (집합) : 순서 x
 
+    - 부분집합 (Subsets) : A의 모든 원소가 B의 원소라면 A는 B의 부분집합 (A ⊆ B)
+ 
+        - **공집합은 모든 집합의 부분집합**
+     
+        - B = ∅ : |B| = 0
+
+        - C = {∅} : |C| = 1
+ 
+    - 진부분집합(proper subset) : A가 B의 부분집합이지만, A와 B가 같지 않는 경우
+ 
+    - Power Sets (멱집합) : 어떤 집합 A의 모든 부분집합들의 집합
+ 
+        - ex: A = {a,b} 라면 P(A) = {∅, {a}, {b}, {a,b}} 여기서 **공집합도 추가하는게 중요**
+   
+    - 가산집합 : 셀 수 있는 집합 (ex: 자연수 집합, 정수 집합, 유리수 집합)
+ 
+    - 비가산 : 셀 수 없는 집합 (ex: 실수 집합, 구간 집합 [0,1])
+ 
+        - **핵심은 무한집합이라고 해서 무조건 비가산 집합이 아니다**
+     
+        - 증명 방법 : 일대일 대응 or 논리적인 수식 
+
 - Tuples (튜플) : 순서 존재, 순서
 
-- Cartesian Product (카티션 곱) : 모든 가능한 조합
+    - Cartesian Product (카티션 곱) : 모든 가능한 조합
 
-    - ex: A = {a,b}, B = {1,2,3}
+        - ex: A = {a,b}, B = {1,2,3}
 
-    - A × B = {(a,1),(a,2),(a,3),(b,1),(b,2),(b,3)} 
+        - A × B = {(a,1),(a,2),(a,3),(b,1),(b,2),(b,3)} 
+
+- 집합 연산 기호
+
+    - Union (합집합)
+ 
+    - intersection (교집합)
+ 
+    - complement (여집합) 
+ 
+    - set difference (차집합)
+
 
  <br/>
 
@@ -169,9 +202,13 @@
     - Range (치역) = 실제로 나온 출력들
 
     - Image (상) = 입력에 대응된 출력
+ 
+        - x의 대응된 **y 값** 
 
     - Preimage (원상) = 어떤 출력에 연결된 입력
  
+        - y를 나오게 한 **x값**
+
     - 전사 : 공역(출력 집합)의 모든 원소가 반드시 연결
 
     - 단사 : 다른 입력은 반드시 다른 출력으로 간다
@@ -218,10 +255,25 @@
  
     - product notation (곱) : 파이(∏)로 곱을 표현 
 
+<br/>
 
+- 행렬 (matrix)
 
-
-
+    - 단위행렬(identity matrix) : 대각선만 모두 1인 행렬
+ 
+        -  일반 곱셉식의 1과 같은 역할
+     
+        -  행렬 A의 0제곱은 단위행렬 In으로 정의
+     
+    - 전치행렬(Transpose of a Matrix) : 행과 열을 서로 바꿔 얻은 행렬
+ 
+    - 대칭행렬(Symmetric Matrix) : 정방행렬 A가 자신의 전치행렬과 같은 행렬
+ 
+        - 전치(transpose)했을 때 모양이 바뀌지 않으면 대칭행렬 
+ 
+    - 0-1 행렬 : 행렬의 값이 오직 0과 1만 가지는 행렬
+ 
+        -  불(Boolean) 연산을 기반 
 
 
 
