--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -275,7 +275,47 @@
  
         -  불(Boolean) 연산을 기반 
 
+<br/>
 
+### 4주차 
+
+- 탐색 알고리즘
+
+    - 선형 탐색 (Linear Search)
+
+        - 리스트의 처음부터 끝까지 차례대로 비교하며 원하는 값을 찾음
+
+        - 정렬 불필요
+
+        - O(n))
+     
+    - 이진 탐색 (Binary Search)
+
+        - 정렬된 리스트에서 중간값과 비교하며 범위를 절반씩 줄여 찾음
+
+        - 정렬 필요
+
+        - O(log n))
+
+<br/>
+
+- 정렬 알고리즘
+
+    - 버블 정렬 (Bubble Sort)
+
+        - 아이디어: 인접한 두 원소를 비교해 잘못된 순서라면 교환, 이 과정을 여러 번 반복
+
+        - 특징: 큰 값이 매 반복마다 거품처럼 뒤로 밀려가며 정렬됨
+
+        - 시간 복잡도: 평균/최악 O(n²).
+
+    - 삽입 정렬 (Insertion Sort)
+
+        - 아이디어: 두 번째 원소부터 시작해, 앞쪽의 정렬된 부분에 적절한 위치를 찾아 삽입.
+
+        - 특징: 사람이 카드를 정렬하는 방식과 유사, 작은 입력에 효율적.
+
+        - 시간 복잡도: 평균/최악 O(n²), 최선 O(n) (이미 거의 정렬된 경우).
 
 
 
