--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -197,7 +197,7 @@ print(cosine_sim(query_vec, document_tfidf_vectors[2]))
 
 - 이에 대한 **정규화** 방안으로 일반적으로 IDF는 **log**를 취한 값을 활용
   
-    - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장IDF로그공.png)
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장IDF로그공식.png)
  
     - 특정 단어의 IDF 값이 혼자 너무 튀는 것을 방지하고 전체적인 데이터 분포를 안정적으로 만들어줌
  
