--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -231,11 +231,63 @@ print(model.todense())
 
 <br/>
 
-### p.10부터
+### TF-IDF 예시 문제 
 
+![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장TF-IDF예시문제.png)
 
+- 풀이과정의 흐름은 아래와 같다 
 
+    - (1) : 토큰화
+ 
+    - (2) : 불용어 제거
+ 
+    - (3) : 어휘집 (Vocabulary) 생성 (등장하는 모든 토큰)
+ 
+    - (4) : TF (Term Frequency) 구하기
+ 
+    - (5) : IDF (Inverse Document Frequency) 구하기 
 
+<br/>
+
+- 풀이과정
+
+    - **토큰화**
+ 
+        - Sent1: the, cat, sat, on, the, mat, .
+
+        - Sent2: the, dog, sat, under, the, tree, .
+
+        - Sent3: the, cat, chased, the, dog, .
+
+    - **불용어 제거**
+ 
+        - Sent1 → cat, sat, on, mat, . (총 5개)
+
+        - Sent2 → dog, sat, under, tree, . (총 5개)
+
+        - Sent3 → cat, chased, dog, . (총 4개)
+     
+    - **어휘집 (Vocabulary) 생성**
+ 
+        - 등장하는 모든 토큰:['.', 'cat', 'chased', 'dog', 'mat', 'on', 'sat', 'tree', 'under'] (총 9개 단어)
+     
+    - **TF 구하기**
+ 
+        - **핵심** : 각 sent 별로 단어의 빈도를 표현
+     
+        - sent 1 을 보면 불용어를 제거한 뒤 토큰은 [cat, sat, on, mat, .] 이고, 해당 토큰에서 'cat' 이라는 단어는 전체 5개의 단어 중 한번만 나온다. 즉 모든 단어가 sent 1에서 한번씩만 나오므로 각각 비율은 동등하게 1/5 = 0.2 이다
+     
+            - Sent1 (길이=5):
+
+                 - cat=0.2, sat=0.2, on=0.2, mat=0.2, .=0.2
+
+            - Sent2 (길이=5):
+
+                 - dog=0.2, sat=0.2, under=0.2, tree=0.2, .=0.2
+
+            - Sent3 (길이=4):
+                
+                 - cat=0.25, chased=0.25, dog=0.25, .=0.25
 
 
 
