--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -289,6 +289,49 @@ print(model.todense())
                 
                  - cat=0.25, chased=0.25, dog=0.25, .=0.25
 
+<br/>
+
+### BM25
+
+(해당 개요는 시험 x )
+- TF-IDF는 단어별로 가중치 벡터를 만든 다음 문서와 쿼리 벡터 사이의 유사도를 코사인 유사도 등으로 따로 계산해야 함
+
+    - 문서 길이나 TF(단어 빈도)가 커지면 단순히 값이 계속 커져버림 → 조정이 부족함
+ 
+    - BM25는 TF-IDF를 개선한 발전형 모델
+
+<br/>
+
+(여기서부터 시험)
+
+- 줄여서 BM25라고 널리 불리는 Okapi BM25는 1990년대에 London’s City University에서 만든 
+Okapi 정보검색 시스템에 쓰인 쿼리-문서 매칭 기법 알고리즘
+
+    - 오픈소스 검색엔진 중 가장 유명한 ElasticSearch에서도 현재 활용하고 있음
+
+<br/>
+
+- **BM25 공식**
+
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25공식자료사진.png)
+ 
+        - qi는 쿼리에서 i번째 토큰 (어절, 형태소, n-gram 등 가능) 
+ 
+        - IDF : 역문서 빈도
+     
+            - IDF를 계산할 때 분모가 0이 되는 문제를 해결하기 위해 아래와 같은 공식을 사용함
+         
+            - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25IDF분모0문제해결공식.png)
+         
+            - 위 공식을 사용하면 and 나 the 같이 흔한 단어를 더 강한 패널티를 줘서 검색 점수에 거의 영향을 주지 않게 한다
+         
+                - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25그래프비교사진.png)
+             
+                - 해당 그래프를 보면 가장 가파르게 떨어지는게 위 공식을 적용한 선이다 
+
+    - 기존 TF-IDF는 단어와 문서 벡터를 만들고, 그 뒤 코사인 유사도 같은 별도의 연산을 통해 유사도를 계산했지만, BM25는 쿼리와 문서를 직접 넣으면 **곧바로 유사도 점수가 결과**로 나온다
+ 
+
 
 
 
