--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -315,7 +315,12 @@ Okapi 정보검색 시스템에 쓰인 쿼리-문서 매칭 기법 알고리즘
 
     - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25공식자료사진.png)
  
-        - qi는 쿼리에서 i번째 토큰 (어절, 형태소, n-gram 등 가능) 
+        - qi는 쿼리에서 i번째 토큰 (어절, 형태소, n-gram 등 가능)
+     
+        - k는 1.2 ~ 2.0 정도로 활용
+     
+            - 간단한 예시를 위해 b=0라고 가정하면, k=0이라면 TF 값이 변해도 우측 term이 변하지 않음
+            - 그러나 k=1일 때는 TF*2 / TF+1 형식이 되어 TF 값이 높아짐에 따라 우측 term 값이 증가함
  
         - IDF : 역문서 빈도
      
@@ -323,7 +328,7 @@ Okapi 정보검색 시스템에 쓰인 쿼리-문서 매칭 기법 알고리즘
          
             - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25IDF분모0문제해결공식.png)
          
-            - 위 공식을 사용하면 and 나 the 같이 흔한 단어를 더 강한 패널티를 줘서 검색 점수에 거의 영향을 주지 않게 한다
+            - 위 공식을 사용하면 and 나 the 같이 흔한 단어를 더 강한 패널티를 줘서 검색 점수에 거의 영향을 주지 않게 한다 -> 희귀한 단어의 가치가 올라감 
          
                 - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장BM25그래프비교사진.png)
              
@@ -331,8 +336,39 @@ Okapi 정보검색 시스템에 쓰인 쿼리-문서 매칭 기법 알고리즘
 
     - 기존 TF-IDF는 단어와 문서 벡터를 만들고, 그 뒤 코사인 유사도 같은 별도의 연산을 통해 유사도를 계산했지만, BM25는 쿼리와 문서를 직접 넣으면 **곧바로 유사도 점수가 결과**로 나온다
  
+<br/>
 
+- **핵심**
 
+    - **TF-IDF 문제점** : 단어가 **많이 반복**되면 점수가 **무한정 커져서 긴 문서가 유리**해짐
+      
+    - **BM25 개선점** : 단어가 일정 횟수 이상 나오면 더 이상 큰 가치를 주지 않고, **상한선(limit)** 에 수렴
+
+- **BM25 vs TF-IDF 비교 최종정리**
+
+    - IDF 차이
+
+        - TF-IDF: 단어가 많이 나오는 문서일수록 중요도가 천천히 줄어듦.
+
+        - BM25: 흔한 단어의 중요도를 훨씬 더 빠르게 줄여버림. → "the, and" 같은 단어는 거의 무시.
+
+    - TF 차이
+
+        - TF-IDF: 단어가 나오면 나올수록 점수가 끝없이 커짐.
+
+        - BM25: 단어가 일정 횟수 이상 나오면 더 이상 점수를 크게 올리지 않음 (포화, saturation).
+
+    - 문서 길이 보정
+
+        - TF-IDF: 같은 단어 수라도 문서가 길면 TF 값이 낮아져 불리.
+
+        - BM25: 평균 문서 길이를 기준으로 보정 → 긴 문서가 불리하지 않게 조정.
+
+    - 출력 형태
+
+        - TF-IDF: 문서 벡터를 만들어서 코사인 유사도로 비교해야 함.
+
+        - BM25: 각 단어별 점수를 계산해서 바로 합산 → 최종 점수가 바로 "쿼리와 문서의 유사도".
 
 
 
