--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -88,19 +88,162 @@
  
         - LSA보다 더 단순한 기법으로 LDA(선형 판별 분석)도 존재함 
 
- ### p.13부터
+ ### LDA 분류기 
+
+ - 각 class의 **TF-IDF 벡터 각각의 무게중심(벡터 평균)** 을 계산한다
+
+     - 두 무게중심을 잇는 **직선을 나타내는 벡터**를 구한다
+  
+     - 각 TF-IDF 벡터들을 무게중심을 이은 벡터에 투영하여 길이를 계산 후, 어느 class에 속하는지 판별한다
+  
+         - 쉽게 말해서 각 메시지 벡터를 그 기준축에 내리고(투영) 길이를 구한 뒤, 그 값이 스팸 쪽에 가까운지 정상 쪽에 가까운지 확인한다 
+
+ - 스펨문자 데이터셋 예시
+
+     -  총 4837개의 데이터 중 638개의 스팸 메시지가 존재하는 상황
+
+- 데이터 준비 코드 
+  
+```ruby
+import pandas as pd
+from nlpia.data.loaders import get_data
+
+pd.options.display.width = 120  # DataFrame 출력 시 가로 폭 설정
+
+sms = get_data('sms-spam')  # SMS 스팸 데이터셋 불러오기
+
+# 인덱스 생성: sms0, sms1 ... 스팸이면 느낌표 추가
+# 느낌표는 출력을 위한 것일 뿐 의미있게 쓰이지는 않음 
+index = ['sms{}!'.format(i, '!'*j) for (i, j) in zip(range(len(sms)), sms.spam)]
+
+# DataFrame으로 변환, 인덱스 지정
+sms = pd.DataFrame(sms.values, columns=sms.columns, index=index)
+
+# spam 컬럼을 정수형(int)으로 변환
+sms['spam'] = sms.spam.astype(int)
+
+print(len(sms))        # 전체 데이터 개수 : 4837 (해당 값은 예시)
+print(sms.spam.sum())  # 스팸 메시지 개수 : 638 (해당 값은 예시)
+
+
+
+#### 학습 데이터 출력 결과는 아래와 같음 ####
+
+#        spam                    text  
+# sms0    0  Go until jurong point, crazy.. Available only ...     
+# sms1    0  Ok lar... Joking wif u oni...                       
+# sms2    1  Free entry in 2 a wkly comp to win FA Cup fina...     
+# sms3    0  U dun say so early hor... U c already then say...     
+# sms4    0  Nah I don't think he goes to usf, he lives aro...     
+# sms5    1  FreeMsg Hey there darling it's been 3 week's n...     
 
 
 
 
+from sklearn.feature_extraction.text import TfidfVectorizer
+from nltk.tokenize.casual import casual_tokenize
+
+# TF-IDF 모델 생성 (casual_tokenize 사용)
+tfidf_model = TfidfVectorizer(tokenizer=casual_tokenize)
+
+# sms.text(문자 메시지들)를 TF-IDF 행렬로 변환 후 배열 형태로 저장
+tfidf_docs = tfidf_model.fit_transform(sms.text).toarray()
+
+print(tfidf_docs.shape)  # (문서 개수, 단어 개수) : (4837, 9232) (예시 값),  어휘집의 토큰 수는 9232임을 알 수 있다
+# 즉, ML 관점에서 feature가 9000개가 넘는데 데이터 개수는 feature 수의 절반을 조금 넘는 수준에 특히 스팸문자 개수는 638개에 불과함 -> 단어(특징)의 수가 데이터 수에 비해 너무 많고, 스팸 데이터가 상대적으로 적어서 모델이 학습하기 어렵다
+print(sms.spam.sum())    # 스팸 메시지 개수 : 638 (예시 값)
+
+```
+
+<br/>
+
+- 무게중심 구하는 코드 
+
+```ruby
+# 스팸 여부를 True/False로 변환해 마스크 생성
+mask = sms.spam.astype(bool).values  
+
+# 스팸 문서들의 TF-IDF 평균 벡터 (스팸 무게중심)
+spam_centroid = tfidf_docs[mask].mean(axis=0)
+
+# 정상 문서들의 TF-IDF 평균 벡터 (정상 메세지 무게중심)
+ham_centroid = tfidf_docs[~mask].mean(axis=0)
+
+# 소수 둘째 자리까지 반올림해 출력
+print(spam_centroid.round(2)) # 예시 출력 : [0.06, 0. , 0. , 0. , 0. , 0. , ...]
+
+print(ham_centroid.round(2)) # 예시 출력 : [0.02, 0.01, 0. , 0. , 0. , 0. , ...]
 
 
 
 
+# 스팸 무게중심과 정상 무게중심의 차이 벡터 = 분류 기준축
+direction_vector = spam_centroid - ham_centroid
+
+# 각 문서(TF-IDF 벡터)를 기준축에 투영한 값 = spamness score
+spamminess_score = tfidf_docs.dot(direction_vector)
+
+# 소수 둘째 자리까지 반올림해 출력 
+print(spamminess_score.round(2)) # 예시 출력 : [-0.01, -0.02, 0.04, ...])
+```
+
+<br/>
+
+- 정규화 및 성능 확인 코드 (참고만)
+
+```ruby
+from sklearn.preprocessing import MinMaxScaler
+
+# 스팸 점수를 0~1 사이로 정규화
+sms['lda_score'] = MinMaxScaler().fit_transform(
+    spamminess_score.reshape(-1, 1)
+)
+
+# 임계값 0.5 기준으로 스팸(1) / 정상(0) 분류
+sms['lda_predict'] = (sms.lda_score > 0.5).astype(int)
+
+# 스팸 여부, 예측 결과, 점수를 확인 (앞 6개만)
+print(sms[['spam', 'lda_predict', 'lda_score']].round(2).head(6))
 
 
 
+# 위 코드는 정규화 후 분류
+# 아래 코드는 분류 성능 확인 
 
+
+
+# 정확도 계산 (실제값 - 예측값의 절대오차 평균)
+accuracy = (1. - (sms.spam - sms.lda_predict).abs().sum() / len(sms)).round(3)
+print(accuracy)  # 예시: 0.977
+
+# 혼동 행렬 (Confusion Matrix)
+from pugnlp.stats import Confusion
+print(Confusion(sms['spam lda_predict'.split()]))
+```
+
+<br/>
+
+### LDA 내용 정리 
+
+- 선형 판별 분석에서는 class 정보에 기반하여 벡터 공간 상에서 하나의 주제(위 예시에서는 스팸)에 대한 **벡터**를 도출하고 그에 기반하여 **주제에 대한 연관도**를 각 단어 및 문서 단위로 계산함
+
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장LDA벡터예시자료.png) 
+
+    - 각 포인트(메시)가 문서의 TF-IDF 벡터이고, 이를 spamness 벡터에 투영한 값이 문서-주제 벡터값이 됨
+ 
+    - 또한 **각 단어**는 벡터 공간에서의 **축**으로 볼 수 있으므로 각 단어의 spamness 연관도 또한 spamness 벡터의 값으로부터 도출 가능함
+ 
+        - TF-IDF 벡터 공간에서는 dim0, dim1, dim2 등 각각의 축이 단어에 해당하므로 해당 축을 나타내는 벡터와 spamness 벡터를 내적하여 단어별 spamness 정도를 도출하는 방식
+
+<br/>
+
+- **LDA**는 원래 잠재 의미 분석을 위한 방법인 것은 아니고, 말 그대로 **선형 판별을 위한 간단한 방법**이지만, **LSA의 핵심 원리가 쓰였다고** 볼 수 있음
+
+    - 단어-주제 관계를 도출한다는 점에서 LSA와 아이디어가 겹 
+
+- LSA는 하나의 주제가 아니라 우리가 **원하는 수의 주제**에 대해 벡터 공간 상에서 주제별 벡터를 도출하고, 이를 바탕으로 각 단어와 문서를 주제 벡터로 표현하는 기법이라고 보면 됨
+
+    - 이를 위해 기본적으로 **SVD(특잇값 분해)** 가 활용되며 **PCA**를 이용한 의미 분석도 가능함
 
 
 
