--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -245,7 +245,9 @@ print(Confusion(sms['spam lda_predict'.split()]))
 
     - 이를 위해 기본적으로 **SVD(특잇값 분해)** 가 활용되며 **PCA**를 이용한 의미 분석도 가능함
 
+<br/>
 
+### 특이값 분해 
 
 
 
