--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -1,4 +1,4 @@
-### TF-IDF 장단점 
+<img width="572" height="170" alt="image" src="https://github.com/user-attachments/assets/22e72223-6a6d-4593-ab4a-36cca8233141" />### TF-IDF 장단점 
 
 - **장점**
 
@@ -247,19 +247,75 @@ print(Confusion(sms['spam lda_predict'.split()]))
 
 <br/>
 
-### 특이값 분해 
+### 특이값 분해 (SVD)
 
+- **특잇값 분해(SVD)** : m×n 실수행렬 A를 A = UΣVᵀ 로 표현한 것
 
+    - U : m×m 직교행렬
+ 
+    - V : n×n 직교행렬
+ 
+    - Σ : 주대각 성분에 A의 특잇값을 큰 것부터 차례대로 넣은 m×n 직사각 대각행렬
+ 
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장특이값분해공식자료.png)
 
+<br/>
 
+- 특이값 분해의 기하학적 의미
 
+- 행렬 A를 f(x) = Ax와 같은 좌표공간에서의 선형변환에 대한 행렬로 볼 때, **직교행렬**은 **회전변환**에 해당하고, **대각행렬** 각 기저벡터 방향으로의 **확대 또는 축소변환**을 나타낸다
 
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장특이값분해기하학적의미자료.png)
+ 
+    - 𝑉𝑇 : 회전/뒤집기
+   
+    - Σ : 늘리기/줄이기
+ 
+        - 가운데 Σ 행렬에서 **대각선 값들이 특이값**이다
+     
+            - 또한, Σ는 m x n 행렬이므로 왼쪽 상단에서 오른쪽 하단 끝까지 간 부분을 대각선으로 정의한
+   
+    - 𝑈 : 다시 회전/뒤집기
 
+<br/>
 
+- **특이값 분해 성질**
 
+    - m x n 행렬 A의 특잇값 분해 A = UΣVᵀ 는 **항상 존재**한다
+ 
+        - 여기서 Σ는 유일하지만, U와 V는 여러개 존재할 수 있다
+     
+        - 즉, **A의 특이값 분해는 유일하지 않다**
 
+<br/>
 
+### 특이값 분해 응용 
 
+- **낮은 계수 근사와 데이터 압축**
+
+    - 행렬을 특잇값 분해를 이용해 전개해보면 **더 작은 특잇값에 관련된 항**일수록 행렬에 미치는 **영향력이 작다**
+ 
+        - SVD에서 나오는 특잇값들은 행렬의 중요한 정보를 담고 있는데, 큰 특잇값은 중요한 정보를 많이 담고, 작은 특잇값은 영향력이 거의 없다
+     
+        - 이에 **작은 특잇값**들은 생략해서 데이터를 **압축**할 수 있다
+
+<br/>
+
+- **낮은 계수 근사 원리** : A 행렬에서 Σ 대각선에 존재하는 **특이값 중 가장 작은 값을 제외**하고 나머지 특이을 더해서 핵심 구조는 유지함
+
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장낮은계수근사공식자료.png)
+ 
+    - 공식을 적용한 예는 아래와 같다. 첫번째 식은 기존 식이고 두번째 식은 낮은 계수 근사 원리를 적용하여 가장 작은 특이값은 루트 5를 제외한 뒤 계산한 것이다
+ 
+        - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장낮은계수근사예시자료.png)
+
+<br/>
+
+### LSA 작동 방식 
+
+- LSA에서는 기본적으로는 **SVD(Singular Value Decomposition, 특잇값 분해)** 를 이용하여 **TF-IDF 행렬을 압축**하고, 압축된 차원에 대한 벡터를 주제 벡터로 활용함
+
+    - ![System Resources](../../images/Natural%20Language%20Processing%20images/04-1장LSA작동방식with특이값분해.png) 
 
 
 
