--- a/Natural Language Processing/Natural Language Processing study/04-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/04-1장.md
@@ -1,4 +1,4 @@
-<img width="572" height="170" alt="image" src="https://github.com/user-attachments/assets/22e72223-6a6d-4593-ab4a-36cca8233141" />### TF-IDF 장단점 
+### TF-IDF 장단점 
 
 - **장점**
 
