--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -27,6 +27,8 @@
         - 장점 : 원 핫 인코딩의 메모리 문제 해결 
 
         - 단점 : 단어들의 순서 및 문법 정보를 손상 (주제만 파악 가능)
+     
+            -  긴 문장에서와 짧은 문장에서 상대적 빈도 차이 발생 (ex: 긴 문장에서는 1000번 정도는 나와야 많이 나온 것)
 
     - Bag-of-words 초기 극복 아이디어
  
@@ -97,10 +99,55 @@
  
     - 일반적으로 어휘 정규화는 **검색의 재현율을 높이지만 정밀도를 낮추게 됨**
 
+<br/>
 
+### 3주차 
 
+- **TF** : 단어 출현 횟수 / 전체 토큰 수
 
+    - 단어가 **한 문서 안에서 얼마나 자주** 나오냐 
 
+- **DF**
+
+    - 단어가 전체 문서 중 **몇 개 문서에서** 나오냐
+  
+- **IDF** : 전체 문서 수 / 해당 단어 출현 문서 수
+
+    - 단어가 전체 문서에 얼마나 **희귀하게** 나오냐
+
+    - IDF 값이 높다 ->  특정 문서에서만 등장하는 단어 -> 각 문서의 주제를 대표하는 단어일 확률이 높아짐
+ 
+    - **IDF 로그 정규화** : 실제로 총 문서가 많을 수 있음 -> 수가 매우 커질 수 있음 -> 로그를 통해 해결
+ 
+- **TF-IDF** : TF x IDF
+
+    - 출현 빈도와 특정 문서에서의 희귀도를 모두 고려
+ 
+        - 이렇게 하면 'and': TF는 높지만, IDF가 매우 낮아서 TF-IDF 점수
+     
+        - **어휘집에 없는 토큰**에 대해서는 **TF-IDF 값을 생성할 수 없음**
+      
+<br/>
+
+- 벡터를 통 유사도 계산
+
+    - 각 벡터의 성분의 위치(index) 동일
+ 
+    - -1에서 +1 사이의 값을 가지며, **값이 높을수록 유사도가 높다**
+
+<br/>
+
+- **BM25**
+
+    - **TF-IDF 문제점** : 단어가 많이 반복되면 점수가 무한정 커져서 긴 문서가 유리해짐
+
+    - **BM25 개선점** : 단어가 일정 횟수 이상 나오면 더 이상 큰 가치를 주지 않고, 상한선(limit) 에 수렴
+ 
+        - 흔한 단어의 중요도를 훨씬 더 빠르게 줄여버림
+     
+        - 평균 문서 길이를 기준으로 보정
+     
+        - 각 단어별 점수를 계산해서 바로 합산 
 
 
 
