--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -101,7 +101,7 @@
 
 <br/>
 
-### 3주차 
+### 3주차 & 4주차
 
 - **TF** : 단어 출현 횟수 / 전체 토큰 수
 
@@ -126,7 +126,22 @@
         - 이렇게 하면 'and': TF는 높지만, IDF가 매우 낮아서 TF-IDF 점수
      
         - **어휘집에 없는 토큰**에 대해서는 **TF-IDF 값을 생성할 수 없음**
-      
+
+<br/>
+
+- **TF-IDF 장단점**
+
+    - 장점 : 문서에서 특정 단어들이 얼마나 중요한지 추정하는데 큰 도움, n 그램도 계산 가능
+ 
+    - 단점 : (1) : **서로 다른 토큰**일 경우 **아예 다른 벡터 성분**으로 표현
+ 
+        - 어간 추출 및 표제어 추출로 어느정도 보완을 할 수 있지만 **완벽하진 않음**
+     
+        - (2) : 단어 간의 상관관계에 대한 정보만 나옴
+     
+            - **단어의 의미에 대한 정보를 추출할 수는 없다**
+         
+            - -> 해결 방법 : **단어-주제 행렬**로 단어 의미를 벡터로 표현 
 <br/>
 
 - 벡터를 통 유사도 계산
@@ -149,9 +164,17 @@
      
         - 각 단어별 점수를 계산해서 바로 합산 
 
+<br/>
 
+- **LDA 분류기** : 각 class의 TF-IDF 벡터 각각의 **무게중심(벡터 평균)** 을 계산
 
+    - 두 무게중심을 잇는 직선을 나타내는 벡터를 구한 뒤 어느 class에 속하는 지 판별
+ 
+    - LDA는 원래 LSA(잠재 의미 분석)을 위한 방법 x, 하지만, 여기서 LSA의 핵심 원리가 쓰였다고 볼 수 있음
 
+- LSA : 하나의 주제가 아니라 우리가 원하는 수의 주제에 대해 LAD 기법을 적용 가능
+
+- **특이값 분해** : LSA에서는 특이값 분해를 활용하여 TF-IDF 행렬을 압축
 
 
 
