--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -288,6 +288,19 @@ print(model.todense())
             - Sent3 (길이=4):
                 
                  - cat=0.25, chased=0.25, dog=0.25, .=0.25
+    <br/>
+
+    - **IDF 구하기**
+ 
+        - **핵심** : 전체 문서 수 / 해당 토큰이 나온 문서 수 구하기
+     
+        - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장TF-IDF예시문제IDF풀이과정자료사진.png)
+
+    <br/>
+    
+    - **최종 TF-IDF 값**
+ 
+        - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장TF-IDF예시문제TF-IDF풀이과정자료사진.png)
 
 <br/>
 
