--- a/Natural Language Processing/Natural Language Processing study/03-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/03-2장.md
@@ -271,6 +271,8 @@ print(model.todense())
  
         - 등장하는 모든 토큰:['.', 'cat', 'chased', 'dog', 'mat', 'on', 'sat', 'tree', 'under'] (총 9개 단어)
      
+        - **마침표 꼭 넣기** -> 문제에서 제시함. 마침표도 토큰으로 분류 
+     
     - **TF 구하기**
  
         - **핵심** : 각 sent 별로 단어의 빈도를 표현
@@ -295,6 +297,8 @@ print(model.todense())
         - **핵심** : 전체 문서 수 / 해당 토큰이 나온 문서 수 구하기
      
         - ![System Resources](../../images/Natural%20Language%20Processing%20images/03-2장TF-IDF예시문제IDF풀이과정자료사진.png)
+     
+        - **마침표도 꼭 넣기**
 
     <br/>
     
