--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -1,3 +1,25 @@
 ### 1주차 
 
 생략
+
+<br/>
+
+### 2주차 
+
+- **집합** : 순서가 없는 원소들의 모임
+
+- **함수 f** : 집합 X에서 집합 Y로 가는 대응 관계
+
+- **Random Experiment (확률 실험)** : 결과를 확실히 예측할 수 없는 현상 (ex: 주사위)
+
+    - 표본공간 = 전체 경우의 수
+
+    - 사건 = 여러 가능한 결과들의 모임 (표본공간에서 하나의 부분집합)
+
+    - 결과 = 실제로 나온 하나의 값
+
+    - 분할 = 표본공간을 빠짐없이 겹치지 않게 나눈 작은 조각들의 집합
+
+    - 결과가 사건에 속하면 → 그 사건이 발생한 것
+
+
