--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -13,6 +13,12 @@
 - **Random Experiment (확률 실험)** : 결과를 확실히 예측할 수 없는 현상 (ex: 주사위)
 
     - 표본공간 = 전체 경우의 수
+ 
+        - 이산 확률공간 : 셀 수 있음
+     
+        - 연속 확률공간 : 셀 수 없음
+     
+            - P([a,b]) = b - a / 구간 길이 
 
     - 사건 = 여러 가능한 결과들의 모임 (표본공간에서 하나의 부분집합)
 
@@ -21,5 +27,107 @@
     - 분할 = 표본공간을 빠짐없이 겹치지 않게 나눈 작은 조각들의 집합
 
     - 결과가 사건에 속하면 → 그 사건이 발생한 것
+
+<br/>
+
+- **Probability (확률 정의)**
+
+    - 사건 A에 대해, 그 사건이 일어날 확률을 **P(A)** 라고 함
+ 
+        - P(A)는 실험을 아주 많이 반복했을 때 사건 A가 관측되는 비율 
+
+<br/>
+
+- **조건부 확률 vs 베이즈 정리**
+
+    - **조건부 확률** : 원인이 발생했을 때 **결과가 나온 확률**
+ 
+    - **베이즈 정리** : 결과가 나왔을 때, 해당 결과가 도출된 **원인의 확률**
+
+<br/>
+
+- **독립** : 두 사건 A와 B가 독립이다 : B가 일어났다는 사실이 A의 확률에 **영향을 주지 않는다**
+
+    - P(A∩B) = P(A)P(B)
+ 
+    - P(A ∩ B ∩ C) = P(A)P(B)P(C)
+ 
+    - P(A|B) = P(A)
+ 
+    - P(A|B)P(B) = P(A)P(B)
+ 
+    - **주의 : 배반(서로 겹치지 않는 사건)과 독립은 다르다**
+ 
+        - A∩B=∅(교집합 없음)은 둘이 동시에 일어날 수 없음을 뜻하지만, 독립은 서로 영향을 주지 않는다는 의미
+     
+        -  A, B가 **둘 다 확률이 0이 아니면서 배반이면, 독립일 수 없다**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
