--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -89,6 +89,8 @@
  
         - 동전 3번은 앞면 확률 0.3 : P(H∣C3) = 0.3
      
+        - 이제 우리는 무작위로 동전 하나를 꺼낸 뒤 던진다고 하자. 각 동전이 선택될 확률은 동일하게 1/3이다. 따라서 앞면이 나올 전체 확률은 다음과 같이 계산할 수 있다
+     
         - 그럼 우리는 상식적으로 0.9 x 1/3 + 0.6 x 1/3 + 0.3 x 1/3 를 할 것이다
      
         - 이것을 일반화 시킨것이 Law of Total Probability (전확률의 법칙)이다
