--- a/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
+++ b/Probability Theory for AI/Probability Theory for AI study/중간정리본.md
@@ -62,9 +62,17 @@
      
         -  A, B가 **둘 다 확률이 0이 아니면서 배반이면, 독립일 수 없다**
 
+<br/>
 
+- **Conditional Independence (조건부 독립)**
 
+    - **일반 독립 (Independence)** : A가 일어났는지 여부가 B의 확률에 전혀 영향을 주지 않는다
 
+        - P(A ∩ B) = P(A)P(B) 
+
+    - **조건부 독립 (Conditional Independence)** : 전체적으로는 A와 B가 독립이 아닐 수도 있지만, C라는 조건을 알면 서로 독립적으로 취급할 수 있다
+ 
+        - P(A ∩ B∣C) = P(A∣C)P(B∣C)
 
 
 
