--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -153,9 +153,24 @@
 
 <br/>
 
-### 조건부독립 예시 추가 + p.77 기대값부터
+### 기댓값 
 
+- **기댓값** : 확률변수가 가질 수 있는 **모든 값의 가중평균**
 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/02-2장기댓값공식설명연속이산모두포함.png)
+ 
+
+    - 단순한 산술평균과 달리, 각 값이 나타날 확률을 고려한 평균. 즉, 그저 평균으로 내는게 아니라 더 많이 나오는 확률를 크게 하는 성질이 존재함
+ 
+    - **반복 실험의 평균적 결과**: 동일한 실험을 무수히 반복했을 때, 관측된 값들의 **평균이 기대값에 수렴**
+ 
+    - **대수의 법칙(Law of Large Numbers)** : 반복이 많아질수록 실험 결과의 평균은 기대값에 가까워진다는 법칙
+ 
+    - 방대한 데이터를 직관적으로 이해 가능
+ 
+    - 딥러닝의 손실 함수(loss function): 기대 손실(expected loss)을 최소화함
+ 
+    - 모델이 다양한 입력과 출력의 불확실성을 고려해 평균적으로 가장 좋은 성능을 내도록 학습
 
 
 
